# HeadUnit

./: .env.example  .gitignore  .gitmodules  AncsManager.cpp  AncsManager.h  AvalancheManager.cpp  AvalancheManager.h  BluetoothDeviceModel.cpp  BluetoothDeviceModel.h  BluetoothManager.cpp  BluetoothManager.h  BorderWaitManager.cpp  BorderWaitManager.h  CLAUDE.md  CLEANUP_PLAN.md  CMakeLists.txt  ClaudeClient.cpp  ClaudeClient.h  ContactManager.cpp  ContactManager.h  ContextAggregator.cpp  ContextAggregator.h  CopilotMonitor.cpp  CopilotMonitor.h  Error recent  FontLoader.qml  GeoUtils.h  GoogleSTT.cpp  GoogleSTT.h  GoogleSpeechRecognizer.cpp  GoogleSpeechRecognizer.h  GoogleTTS.cpp  GoogleTTS.h  HighwayCameraManager.cpp  HighwayCameraManager.h  Main.qml  MediaController.cpp  MediaController.h  MessageManager.cpp  MessageManager.h  (+49 more)
Ui/: ActiveCallOverlay.qml  AppGridOverlay.qml  BluetoothHandler.qml  Button.qml  CallOverlayBase.qml  ClaudeIndicator.qml  GlancePanel.qml  GlowActionIcon.qml  GlowButton.qml  IncomingCallOverlay.qml  MapWeb.qml  MiniPlayer.qml  NavBar.qml  NotificationBanner.qml  NotificationPanel.qml  Page.qml  ScreenContainer.qml  SplashScreen.qml  StatusBar.qml  TidalNative.qml  TidalWeb.qml  VoiceControl.qml  VoicePipeline.qml  WebTest.qml
Ui/screens/: AppGrid.qml  Camera.qml  Climate.qml  Contacts.qml  Home.qml  Maps.qml  Messages.qml  Music.qml  Phone.qml  Podcasts.qml  Radio.qml  Settings.qml  Spotify.qml  Tidal.qml  Tuning.qml  Vehicle.qml  Weather.qml
Ui/settings/: AboutSettings.qml  AdvancedSettings.qml  BluetoothSettings.qml  DisplaySettings.qml  TimeSettings.qml  VoiceSettings.qml
archive/backups/: MediaController.cpp.bak  MediaController.h.bak  tokens.json.backup
archive/bluetooth-debug/: enable_bluetooth_battery.sh  fix_bluetooth_battery.sh  fix_bluetooth_config.sh  fix_bluetooth_nvidia_override.sh  setup_pairing.sh  switch_to_new_bluez.sh  unpair_and_repair_iphone.sh  upgrade_bluez.sh
assets/html/: map_view.html  map_view_mobile.html  tidal_player.html
docs/: SAMMY_AI_INTEGRATION.md  TIDAL_PLAYER_PLAN.md
services/: spotify_service.py  tidal_service.py
tests/eglfs-test/: CMakeLists.txt  main.qml  run-eglfs-test.sh
themes/Cyberpunk/: tokens.json
themes/Monochrome/: tokens.json
themes/RetroVFD/: tokens.json
tools/: generate_splash_nanobanana.py  render_splash.py
